# musclemimic

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CONTRIBUTING.md  Makefile  README.md  RUN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bimanual/: conf_bimanual.yaml  conf_bimanual_demo.yaml  conf_bimanual_gmr.yaml  conf_bimanual_moe.yaml  eval.py  experiment.py
examples/retargeting/: retarget_visualize.py
examples/runai/: doc.md
examples/slurm/: job.sh
fullbody/: _eval_terminal.py  conf_fullbody.yaml  conf_fullbody_demo.yaml  conf_fullbody_gmr.yaml  conf_fullbody_gmr_resnet.yaml  conf_fullbody_moe.yaml  conf_fullbody_walk.yaml  eval.py  experiment.py
loco_mujoco/: __init__.py
loco_mujoco/core/: __init__.py  mujoco_base.py  stateful_object.py
loco_mujoco/core/control_functions/: base.py  default.py  pd.py
loco_mujoco/core/domain_randomizer/: __init__.py  base.py  default.py  no_randomization.py
loco_mujoco/core/initial_state_handler/: base.py  default.py  traj_init_state.py
loco_mujoco/core/observations/: __init__.py  base.py  goals.py  visualizer.py
loco_mujoco/core/reward/: __init__.py  base.py  default.py  utils.py
loco_mujoco/core/terminal_state_handler/: __init__.py  base.py  bimanual.py  height.py  no_terminal.py  traj.py
loco_mujoco/core/terrain/: __init__.py  base.py  rough.py  static.py
loco_mujoco/core/utils/: __init__.py  backend.py  decorators.py  env.py  math.py  mujoco.py
loco_mujoco/core/visuals/: __init__.py  scene.py  video_recorder.py  viewer.py
loco_mujoco/datasets/: __init__.py
loco_mujoco/datasets/data_generation/: utils.py
loco_mujoco/smpl/: __init__.py  const.py  generate_smplh_model.py  install_smplh.sh  parser.py  retargeting.py
loco_mujoco/smpl/gmr_configs/: smplh_to_myofullbody.json
loco_mujoco/smpl/robot_confs/: MyoFullBody.yaml
loco_mujoco/smpl/utils/: smoothing.py
loco_mujoco/task_factories/: __init__.py  base.py  dataset_confs.py  imitation_factory.py  rl_factory.py
loco_mujoco/trajectory/: __init__.py  dataclasses.py  handler.py
loco_mujoco/utils/: __init__.py  dataset.py  running_stats.py  video.py
musclemimic/: __init__.py  utils.py
musclemimic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
musclemimic/algorithms/: __init__.py
musclemimic/algorithms/common/: __init__.py  adaptive_sampling.py  base_algorithm.py  checkpoint_hooks.py  checkpoint_manager.py  checkpoint_utils.py  curriculum.py  dataclasses.py  env_state_utils.py  env_utils.py  moe_networks.py  networks.py  optimizer.py
musclemimic/algorithms/ppo/: __init__.py  checkpoint.py  config.py  inference.py  (+4 more)
musclemimic/core/: __init__.py  mujoco_mjx.py
musclemimic/environments/: __init__.py  base.py
musclemimic/rl_core/: __init__.py  rollout_buffer.py
musclemimic/runner/: __init__.py  checkpointing.py  engine.py  eval_utils.py  logging.py  validation_video_recorder.py
musclemimic/utils/: __init__.py  debug_tools.py  demo_cache.py  display.py  gmr_cache.py  logging.py  metrics.py  model.py  utd.py
musclemimic/viewer/: __init__.py  viser_utils.py  viser_viewer.py
scripts/: ec2_setup.sh  retarget_dataset.py  setup_linux.sh  sync_public_repo.sh  upload_checkpoint.py
tests/: test_engine_preempt_resume.py  test_muscle_observations.py  test_n_step_lookahead.py  test_resume_checkpoint_scenarios.py
tests/unit/: conftest.py  test_adaptive_sampling.py  test_auto_resume.py  test_auto_resume_integration.py  test_curriculum.py  test_dataset_group_spec.py  test_default_control.py  test_enhanced_fullbody_terminal_handler.py  test_enhanced_fullbody_terminal_handler_integration.py  test_inference_obs_history.py  test_metrics.py  test_mimic_reward.py  test_mjx_reset.py  test_model_mass.py  test_model_utils.py  test_msk_metrics.py  test_n_step_wrapper.py  test_ppo.py  test_ppo_config.py  test_ppo_early_termination_metrics.py  test_rollout_buffer.py  test_split_goal_integration.py  test_terrain_height_sampling.py  test_trajectory_handler_boundary.py  test_validation_video_recorder.py  test_video_recorder.py  test_warp_backend.py
(+20 files in other folders)
